# xtensor-basic

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  example.py  main.cpp  plot.py  requirements.txt  run.sh
benchmark/: benchmark(2000, 3000, 100).csv  benchmark(2000, 3000, 100)_manyksizes.csv  benchmark(2048, 4096, 100).csv
